--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,17 +11,6 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  bintray-cleanup:
-    runs-on: ubuntu-18.04
-
-    steps:
-      - name: Remove old artifacts from Bintray
-        shell: bash
-        run: |
-          curl -sfSLO 'https://raw.githubusercontent.com/Ortham/ci-scripts/2.1.4/delete_old_bintray_versions.py'
-          python3 delete_old_bintray_versions.py -g loot/loot -b loot/snapshots/loot -u wrinklyninja -k ${{ secrets.BINTRAY_API_KEY }} -t ${{ secrets.GITHUB_TOKEN }} -n 10
-        if: github.event_name == 'push'
-
   windows:
     runs-on: windows-2016
 
@@ -123,20 +112,16 @@ jobs:
           echo "::set-output name=basename::loot_${VERSION}-${PLATFORM}"
         if: github.event_name == 'push'
 
-      - name: Upload archive to BinTray
-        shell: bash
-        run: |
-          VERSION="${{ steps.get-loot-version.outputs.version }}"
-          FILENAME="${{ steps.get-artifact-basename.outputs.basename }}.7z"
-
-          curl -sfSL -T "build/loot_${VERSION}.7z" -u "wrinklyninja:${{ secrets.BINTRAY_API_KEY }}" "https://bintray.com/api/v1/content/loot/snapshots/loot/${VERSION}/${FILENAME}?publish=1&override=1"
+      - name: Upload archive
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ steps.get-artifact-basename.outputs.basename }}.7z
+          path: build/loot_${{ steps.get-loot-version.outputs.version }}.7z
         if: github.event_name == 'push'
 
-      - name: Upload installer to BinTray
-        shell: bash
-        run: |
-          VERSION="${{ steps.get-loot-version.outputs.version }}"
-          FILENAME="${{ steps.get-artifact-basename.outputs.basename }}.exe"
-
-          curl -sfSL -T "build/LOOT Installer.exe" -u "wrinklyninja:${{ secrets.BINTRAY_API_KEY }}" "https://bintray.com/api/v1/content/loot/snapshots/loot/${VERSION}/${FILENAME}?publish=1&override=1"
+      - name: Upload installer
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ steps.get-artifact-basename.outputs.basename }}.exe
+          path: build/LOOT Installer.exe
         if: github.event_name == 'push' && matrix.platform == 'Win32'
